--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		<version>2.0.0.M7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -65,10 +65,12 @@
 				<version>2.20.1</version>
 				<configuration>
 					<includes>
-						<include>
-							<include>**/*IT.java</include>
-						</include>
+						<include>**/*IT.java</include>
 					</includes>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${basedir}/target/classes</additionalClasspathElement>
+					</additionalClasspathElements>
+					<parallel>none</parallel>
 				</configuration>
 				<executions>
 					<execution>
@@ -81,6 +83,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
